[package]
name = "abstract-deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot-cw-plus = "0.5.1"
boot-core = "0.5.1"
abstract-boot = "0.5.2"
cosmwasm-std = "1.1.9"

tokio = { version = "1.4", features = ["full"] }
log = "0.4.14"
anyhow = "1"
serde_json = "1.0.79"
reqwest = { version = "0.11.9" }
dotenv = "0.15.0"
env_logger = "0.10.0"

semver = { package = "cw-semver", version = "1.0.0", git = "https://github.com/Abstract-OS/cw-semver.git" }
abstract-os = "0.5.2"
clap =  { version = "4.0.32", features = ["derive"] }
